# master_thesis

./: .gitignore  README.md  meeting_15.02.md  meeting_17.01.md  observations.md
api_server/: Cargo.toml  Dockerfile  README.md  build.rs
api_server/proto/: message.proto
api_server/src/: main.rs
data_analysis/: analyze.py
k8_apps/: README.md  client.Dockerfile  iperf_client.sh  iperf_server.sh  server.Dockerfile
k8_deployment/: README.md  basic.tf  client-deployment.yml  deployment.yml  inventory.ini  playbook.yml  server-deployment.yml  terraform.tfstate  terraform.tfstate.backup  terraform.yaml  variables.tf
k8_deployment/deployments/: README.md  api_server.yml  app1_values.yml  app2_values.yml  client-deployment.yml  config.json  server-deployment.yml  test_values.yml  values-test.yml
k8_deployment/playbooks/: README.md  copylogs.yml  k3s.yml  kubeconfig.yml  network.yml  network_prober.yml  test-playbook.yml
k8_scheduler/: README.md  go.mod  go.sum  main.go  simple.gv
k8_scheduler/common/: config.go  config.yaml  structs.go  utils.go
k8_scheduler/math/: LinearFunction.go  MaxPlus.go  MinPlus.go  math_test.go
scheduler/: go.mod  go.sum  main.go  simple.gv  test.go
simulator/: .gitignore  README.md  Time.py  algorithm.py  chaos_monkey.py  conf.py  evaluator.py  experiments.py  metrics.py  network_administration.py  observations.md  requirements.txt  scheduler.py  simulation.py  test.py  time_singleton.py  utils.py  visualizer.py
testbed/: copy_logs.sh  gns3_experiment.py  limit.sh  reset.sh  set_link_data.sh  setup.sh
(+43 files in other folders)
